Closed Bug 1445980 Opened 5 years ago Closed 5 years ago

Assertion failure: lastLevel <= 31 (Right-shift is only defined for bits-1.), at /builds/worker/workspace/build/src/dom/canvas/WebGLTextureUpload.cpp:1144

Categories

(Core :: Graphics: CanvasWebGL, defect)

59 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- wontfix
firefox59 --- wontfix
firefox60 --- wontfix
firefox61 --- fixed

People

(Reporter: jkratzer, Assigned: jgilbert)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase, Whiteboard: [gfx-noted])

Attachments

(2 files)

Attached file trigger.html
Testcase found while fuzzing mozilla-central rev fcb11e93adf5.

rax = 0x0000000000000000   rdx = 0x0000000000000000
rcx = 0x00007f44eea9f2dd   rbx = 0x00007f44c39f9000
rsi = 0x00007f44eed6e770   rdi = 0x00007f44eed6d540
rbp = 0x00007ffe9a7dbf30   rsp = 0x00007ffe9a7dbe80
r8 = 0x00007f44eed6e770    r9 = 0x00007f44efe39740
r10 = 0x0000000000000039   r11 = 0x0000000000000000
r12 = 0x0000000000000100   r13 = 0x0000000000000080
r14 = 0x0000000000000100   r15 = 0x00007ffe9a7dbfe0
rip = 0x00007f44ded4e4c6
OS|Linux|0.0.0 Linux 4.4.0-116-generic #140-Ubuntu SMP Mon Feb 12 21:23:04 UTC 2018 x86_64
CPU|amd64|family 6 model 78 stepping 3|1
GPU|||
Crash|SIGSEGV|0x0|0
0|0|libxul.so|mozilla::WebGLTexture::TexStorage|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGLTextureUpload.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|1144|0x5
0|1|libxul.so|mozilla::WebGL2Context::TexStorage|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGL2ContextTextures.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|23|0x21
0|2|libxul.so|mozilla::dom::WebGL2RenderingContextBinding::texStorage3D|hg:hg.mozilla.org/mozilla-central:dom/canvas/WebGL2Context.h:fcb11e93adf57210167de0b27b15433e9c3f45e4|108|0x18
0|3|libxul.so|mozilla::dom::GenericBindingMethod|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|3031|0x9
0|4|libxul.so|js::CallJSNative|hg:hg.mozilla.org/mozilla-central:js/src/vm/JSContext-inl.h:fcb11e93adf57210167de0b27b15433e9c3f45e4|290|0x6
0|5|libxul.so|js::InternalCallOrConstruct|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|467|0xf
0|6|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|516|0xd
0|7|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|522|0xf
0|8|libxul.so|js::RunScript|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|417|0xb
0|9|libxul.so|js::ExecuteKernel|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|700|0x5
0|10|libxul.so|js::Execute|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|733|0x5
0|11|libxul.so|ExecuteScript|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|4712|0x12
0|12|libxul.so|ExecuteScript|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|4731|0x5
0|13|libxul.so|nsJSUtils::ExecutionContext::CompileAndExec|hg:hg.mozilla.org/mozilla-central:dom/base/nsJSUtils.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|266|0xc
0|14|libxul.so|mozilla::dom::ScriptLoader::EvaluateScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|2321|0x12
0|15|libxul.so|mozilla::dom::ScriptLoader::ProcessRequest|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|1950|0xb
0|16|libxul.so|mozilla::dom::ScriptLoader::ProcessInlineScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|1591|0xf
0|17|libxul.so|mozilla::dom::ScriptLoader::ProcessScriptElement|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|1310|0xb
0|18|libxul.so|mozilla::dom::ScriptElement::MaybeProcessScript|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptElement.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|141|0x13
0|19|libxul.so|nsIScriptElement::AttemptToExecute|hg:hg.mozilla.org/mozilla-central:dom/script/nsIScriptElement.h:fcb11e93adf57210167de0b27b15433e9c3f45e4|247|0x3
0|20|libxul.so|nsHtml5TreeOpExecutor::RunScript|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5TreeOpExecutor.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|736|0x10
0|21|libxul.so|nsHtml5TreeOpExecutor::RunFlushLoop|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5TreeOpExecutor.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|540|0x8
0|22|libxul.so|nsHtml5ExecutorFlusher::Run|hg:hg.mozilla.org/mozilla-central:parser/html/nsHtml5StreamParser.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|131|0x10
0|23|libxul.so|mozilla::SchedulerGroup::Runnable::Run|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|413|0x1c
0|24|libxul.so|nsThread::ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|1096|0x15
0|25|libxul.so|NS_ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|517|0x11
0|26|libxul.so|mozilla::ipc::MessagePump::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|97|0xa
0|27|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:fcb11e93adf57210167de0b27b15433e9c3f45e4|326|0x17
0|28|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:fcb11e93adf57210167de0b27b15433e9c3f45e4|319|0x8
0|29|libxul.so|nsBaseAppShell::Run|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|157|0xd
0|30|libxul.so|XRE_RunAppShell|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|893|0x11
0|31|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|269|0x5
0|32|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:fcb11e93adf57210167de0b27b15433e9c3f45e4|326|0x17
0|33|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:fcb11e93adf57210167de0b27b15433e9c3f45e4|319|0x8
0|34|libxul.so|XRE_InitChildProcess|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|719|0x8
0|35|firefox|content_process_main|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|50|0x14
0|36|firefox|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:fcb11e93adf57210167de0b27b15433e9c3f45e4|280|0x11
0|37|libc-2.23.so||||0x20830
0|38|firefox|MOZ_ReportAssertionFailure|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:fcb11e93adf57210167de0b27b15433e9c3f45e4|164|0x5
Flags: in-testsuite?
Confirmed, tab instantly crashes on my local Ubuntu machine. Works fine on macos, though.
Whiteboard: [gfx-noted]
Assignee: nobody → jgilbert
Comment on attachment 8962570 [details]
Bug 1445980 - TexStorage should validate both highest and lowest levels. -

https://reviewboard.mozilla.org/r/231382/#review236890
Attachment #8962570 - Flags: review?(kvark) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/47d8b357ce43
TexStorage should validate both highest and lowest levels. - r=kvark
https://hg.mozilla.org/mozilla-central/rev/47d8b357ce43
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.