Bug 1445980 - TexStorage should validate both highest and lowest levels. - r=kvark

MozReview-Commit-ID: 3MtNEAtuadY